--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,7 @@
-$turquoise: turquoise;
-
-$primary: $turquoise;
+$primary: #26547C;
+$success: #EF476F;
+$danger: #FFD166;
+// #06D6A0
+// #FFFCF9
 
 $section-padding: 1rem 1.5rem;
