Work on basic layout of login page & colour scheme

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,7 +1,7 @@
-$primary: #26547C;
-$success: #EF476F;
-$danger: #FFD166;
-// #06D6A0
-// #FFFCF9
+$primary: #247BA0;
+$success: #70C1B3;
+$danger: #FF1654;
+// #B2DBBF
+// #F3FFBD
 
 $section-padding: 1rem 1.5rem;
