Fade transition on episode button
Okay, so that's easier than I thought it was to do.

--- a/src/sass/episode.scss
+++ b/src/sass/episode.scss
@@ -2,6 +2,7 @@
 
 .episode-mark-watched {
   cursor: pointer;
+  transition: 0.4s;
 }
 
 .episode-mark-watched:hover, .episode-mark-watched:active {
