--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "./sass/variables.scss";
+@import "sass/variables.scss";
 
 // Override defaults in packages
 @import "../node_modules/bulma";
