Fixing white headings inside hero box

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import "sass/variables.scss";
 
+.hero.is-primary .box .title {
+  color: inherit;
+}
+
 // Override defaults in packages
 @import "../node_modules/bulma";
 @import "../node_modules/animate.css";
